changes: - added mapstruct - added abstract crud service - implemented user phones and emails update logic
